<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_inventory"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.think.wsntrayapp.InventoryActivity">

    <com.example.think.wsntrayapp.base_view.HeadView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/inventory_title"></com.example.think.wsntrayapp.base_view.HeadView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorGray_d">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/inventory_goods_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="10dp"
            android:text="@string/inventory_grade_name"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:padding="10dp"
            android:text="@string/inventory_number"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />
    </RelativeLayout>


    <ListView
        android:id="@+id/inventory_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>
